--- a/css/module.css
+++ b/css/module.css
@@ -1,6 +1,16 @@
 @charset "UTF-8";
 /* CSS Document */
 
+div {
+    font-size: small;
+}
+
+button {
+    background-color: black;
+    color: white;
+    font-size: large;
+    padding: 4px;
+}
 
 .smalltext {
 	font-size:small;
@@ -271,6 +281,7 @@ h1, h2, h3 {
 
 #template {
     display: none;
+    overflow: scroll;
 }
 
 #sectionEdit {
@@ -309,7 +320,8 @@ h1, h2, h3 {
 }
 
 .sectionAction {
-    float: right;
+    float: left;
+    padding-left:10px;
 }
 
 #freemium {
